<resources>
    <string name="app_name">仁人来</string>
    <string name="text_back">返回</string>
    <string name="text_forward">提交</string>
    <string name="add_tag">自定义</string>


    <!-- Strings related to login register-->
    <string name="prompt_username">昵称</string>
    <string name="prompt_username_tel">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm">确认密码</string>
    <string name="prompt_tel">手机号码</string>
    <string name="action_sign_in">登录</string>

    <string name="verify">验证</string>
    <string name="register">注册</string>
    <string name="hint_empty_phone">手机号不能为空</string>
    <string name="hint_invalid_phone">请输入有效的手机号</string>

    <string name="getcode_hint">获取验证码</string>
    <string name="smscode_hint">请输入手机验证码</string>
    <string name="search_hint">请输入关键字</string>

    <!--bottom item-->
    <string name="tab_find">发现</string>
    <string name="tab_activity">发起活动</string>
    <string name="tab_me">我的</string>

    <!--发现-->
    <string name="fund_intro">社区基金简介</string>
    <string name="introduction">简介</string>
    <string name="apply">申请</string>
    <string name="project">项目一览</string>

    <string name="txt_home">我的家园</string>
    <string name="txt_dream">更多梦想</string>

    <string name="str_how">怎么称呼您？</string>
    <string name="str_which">简单说说您的点子吧~</string>
    <string name="str_what">您想达到什么样的目标？</string>
    <string name="str_who">您的点子将为谁带来益处？</string>
    <string name="str_when">您计划在什么时候做？</string>

    <string name="str_fund_support">基金支持专项活动</string>

    <string name="dummy_text1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>

    <string name="no_data">暂无数据</string>
    <string name="no_activity_data"><Data><![CDATA[咦？一个活动都没有<br/><br/>
        身边没活动真可怕，因为仁人来还不知道你在哪儿<br/>]]></Data>
    </string>
    <string name="no_data_link">快去设置所在城市和小区吧</string>
    <string name="no_more_dream">暂无更多梦想</string>

    <!--我的-->
    <string name="txt_favorite">喜欢</string>
    <string name="txt_cancel_favorite">取消喜欢</string>
    <string name="txt_enroll">报名</string>
    <string name="txt_launch">发起</string>
    <string name="txt_my_activity">我的活动</string>
    <string name="txt_feedback">请填写您的意见或建议，我们将尽快处理。</string>
    <string name="str_tel">请输入手机号</string>
    <string name="str_tips">消息</string>
    <string name="str_invite">邀请好友加入</string>
    <string name="str_feedback">我要反馈</string>
    <string name="str_save">是否保存草稿</string>
    <string name="agree">是</string>
    <string name="disagree">否</string>
    <string name="str_group_name_hint">输入小区名字</string>
    <string name="str_modity_limit">30日内只能修改一次</string>

    <string name="str_system_alarm">系统消息</string>
    <string name="str_review">评论</string>
    <string name="str_like">收到的喜欢</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_tag_gs_empty">格式不对</string>

    <!--我的资料-->
    <string name="txt_nick_name">昵称</string>
    <string name="txt_my_community">我的小区</string>
    <string name="txt_gender">性别</string>
    <string name="txt_community">所在社区</string>
    <string name="txt_hobby">我喜欢</string>
    <string name="txt_introduction">个人简介</string>
    <string name="txt_password">修改密码</string>
    <string name="txt_hint_intro">请添加个人描述,不超过50个字</string>
    <string name="selection_limit_reached">最多支持5个标签</string>

    <!--修改密码-->
    <string name="txt_old_password">原密码</string>
    <string name="txt_confirm_password">确认密码</string>
    <string name="txt_new_password">新密码</string>


    <!--发起活动-->
    <string name="txt_select_category">请选择活动类型</string>
    <string name="txt_category">活动类型</string>
    <string name="txt_interest">兴趣</string>
    <string name="txt_help">公益</string>
    <string name="txt_advice">议事</string>
    <string name="txt_interest_hint">文化 运动 爱好等兴趣活动</string>
    <string name="txt_help_hint">志愿 互助 环保等公益活动</string>
    <string name="txt_advice_hint">一起讨论小区身边费大小事</string>


    <string name="txt_theme">活动主题:</string>
    <string name="txt_start_time">开始时间:</string>
    <string name="txt_end_time">结束时间:</string>
    <string name="txt_end">报名截止:</string>
    <string name="txt_place">活动地点:</string>
    <string name="txt_people">活动人数:</string>
    <string name="txt_project">所属项目:</string>
    <string name="txt_detail">活动详情:</string>
    <string name="txt_cover">选择封面:</string>
    <string name="txt_activity_cover">活动封面:</string>
    <string name="txt_preview">预览</string>
    <string name="txt_publish">立即发布</string>
    <string name="txt_apply">提交申请</string>

    <string name="txt_enroll_number">报名人数</string>
    <string name="txt_favor_number">喜欢人数</string>


    <string name="txt_comment">评论</string>
    <string name="txt_favor">喜欢</string>
    <string name="txt_im_enroll">立即报名</string>
    <string name="txt_enrolling">报名中</string>
    <string name="txt_close">报名截止</string>
    <string name="txt_already_end">已结束</string>

    <string name="str_select">请选择</string>
    <string name="str_pic_photo">从相册选择</string>
    <string name="str_take_pic">从库图片选择</string>


    <string name="str_logout">注销账号</string>
    <string name="cancelBtn">取消</string>
    <string name="okBtn">确定</string>
    <string name="str_start">立即体验</string>


    <!--活动详情-->
    <string name="str_favorite">喜欢:</string>
    <string name="str_comment">评论:</string>
    <string name="str_send">发送</string>
</resources>
