<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.siti.renrenlai.activity.RegisterActivity">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tel"
                    android:inputType="phone"
                    android:paddingTop="10dp" />

                <Button
                    android:id="@+id/btn_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingLeft="@dimen/drawable_padding_5"
                    android:paddingRight="@dimen/drawable_padding_5"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:text="@string/getcode_hint"
                    android:textColor="@color/white"
                    android:background="#F5A623"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_smscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/smscode_hint"/>

            <Button
                android:id="@+id/btn_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/verify"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
