<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_top_border"
            android:drawableTop="@drawable/tab_find_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/tab_find"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_top_border"
            android:drawableTop="@drawable/tab_find_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/tab_activity"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_top_border"
            android:drawableTop="@drawable/tab_find_btn"
            android:onClick="onTabSelect"
            android:paddingTop="10dip"
            android:scaleType="matrix"
            android:text="@string/tab_me"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>
