<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.siti.renrenlai.activity.RegisterActivity">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_8">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tel"
                    android:inputType="phone"
                    android:paddingTop="10dp" />

                <Button
                    android:id="@+id/btn_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingLeft="@dimen/drawable_padding_5"
                    android:paddingRight="@dimen/drawable_padding_5"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:text="获取验证码"
                    android:textColor="@color/white"
                    android:background="#F5A623"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <AutoCompleteTextView
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <AutoCompleteTextView
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/padding_10"
                    android:text="选择城市"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
