<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fund_intro"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_96"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fund_intro"
                android:textSize="@dimen/text_size_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/background" />

            <RelativeLayout
                android:id="@+id/layout_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/str_how"
                    style="@style/me_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/str_how" />

                <EditText
                    android:id="@+id/et_how"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/str_how"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:singleLine="true"
                    android:background="@null" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/str_which"
                    style="@style/me_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_which" />

                <EditText
                    android:id="@+id/et_which"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/str_which"
                    android:background="@null"
                    android:gravity="top"
                    android:minLines="3"
                    android:padding="@dimen/margin_8" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/str_what"
                    style="@style/me_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_what" />

                <EditText
                    android:id="@+id/et_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/str_what"
                    android:background="@null"
                    android:gravity="top"
                    android:minLines="3"
                    android:padding="@dimen/margin_8" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/margin_8"
                android:paddingLeft="@dimen/margin_8"
                android:paddingTop="@dimen/margin_8">

                <TextView
                    android:id="@+id/str_who"
                    style="@style/me_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_who" />

                <EditText
                    android:id="@+id/et_who"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/str_who"
                    android:background="@null"
                    android:gravity="top"
                    android:minLines="3"
                    android:padding="@dimen/margin_8" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:background="@drawable/layout_bottom_border"
                android:padding="@dimen/padding_10">

                <TextView
                    android:id="@+id/str_when"
                    style="@style/me_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/str_when" />

                <TextView
                    style="@style/project_name"
                    android:id="@+id/tv_when"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/str_when"
                    android:background="@null"
                    android:nextFocusDown="@+id/tv_deadline"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/layout_bottom_border"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_preview"
                        style="@style/me_text_style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background"
                        android:gravity="center"
                        android:text="@string/txt_preview" />

                    <Button
                        android:id="@+id/btn_publish"
                        style="@style/me_text_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/btn_preview"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background"
                        android:gravity="center"
                        android:text="@string/txt_publish" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>